# RAG-knowledge-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
src/: assistant.py  chunking.py  config.py  data_loader.py  embeddings.py  indexing.py  llm.py  pipeline.py  query.py  rag_pipeline.py  schemas.py  vectorstore.py
